# ollama-mcp-bridge-cpp

./: .gitignore  CMakeLists.txt
.zenflow/tasks/new-task-25e7/: plan.md  requirements.md  spec.md
.zenflow/tasks/new-task-d466/: plan.md
cmake/: embed_web.cmake
cpp/: app_state.h  config_manager.cpp  config_manager.h  log_buffer.cpp  log_buffer.h  main.cpp  mcp_client.cpp  mcp_client.h  mcp_manager.cpp  mcp_manager.h  proxy_service.cpp  proxy_service.h  server.cpp  server.h  tls_manager.cpp  tls_manager.h  utils.cpp  utils.h  web_server.cpp  web_server.h
web/: index.html
